--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -112,12 +112,13 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 
 # status line {{{
   set -g @nord_tmux_show_status_content "0"
+  set -g @colors-solarized 'dark'
   set -g @online_icon "#[bg=green, fg=black, bold]  ONLINE #[bg=default, fg=default, nobold]"
   set -g @offline_icon "#[bg=red, fg=black, bold]  OFFLINE #[bg=default, fg=default, nobold]"
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
-  set -g @world_clock_tz 'Asia/Kolkata'
+  # set -g @world_clock_tz 'Asia/Kolkata'
 
   set-option -g status-left "#{pomodoro_status} "
   set-option -g status-right "#{online_status} #(vpn_status) #[bg=blue, fg=black] #{world_clock_status} "
@@ -136,7 +137,8 @@ set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
 set -g @plugin "tmux-plugins/tmux-online-status"
-set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
