--- a/snowblocks/neovim/snowblock.json
+++ b/snowblocks/neovim/snowblock.json
@@ -6,7 +6,8 @@
       "~/.config/nvim/after",
       "~/.config/nvim/pack",
       "~/.config/nvim/.pack",
-      "~/.config/nvim/UltiSnips"
+      "~/.config/nvim/UltiSnips",
+      "~/.config/nvim/make_programs"
     ]
   },
   {
@@ -29,6 +30,7 @@
       "~/.config/nvim/autoload": { "create": true, "relink": true },
       "~/.config/nvim/after": { "create": true, "relink": true },
       "~/.config/nvim/UltiSnips": { "create": true, "relink": true },
+      "~/.config/nvim/make_programs": { "create": true, "relink": true },
       "~/.config/nvim/.pack": {
         "create": true,
         "relink": true,
