--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -111,7 +111,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 
 
 # status line {{{
-  set -g @nord_tmux_show_status_content "0"
+  # set -g @nord_tmux_show_status_content "0"
   set -g @colors-solarized 'dark'
   set -g @online_icon "#[bg=green, fg=black, bold]  ONLINE #[bg=default, fg=default, nobold]"
   set -g @offline_icon "#[bg=red, fg=black, bold]  OFFLINE #[bg=default, fg=default, nobold]"
