--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -136,7 +136,7 @@ set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
 set -g @plugin "tmux-plugins/tmux-online-status"
-set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin "arcticicestudio/nord-tmux"
 # set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Check if tmux plugin manager is installed, otherwise clone it.
