--- a/snowblocks/terminal/alacritty.yml
+++ b/snowblocks/terminal/alacritty.yml
@@ -42,24 +42,21 @@ draw_bold_text_with_bright_colors: false
 font:
   # The normal (roman) font face to use.
   normal:
-    family: FuraCode Nerd Font
-    # Style can be specified to pick a specific face.
-    style: Retina
+    family: SauceCodePro Nerd Font
+    style: Regular
 
   # The bold font face
   bold:
-    family: FuraCode Nerd Font
-    # Style can be specified to pick a specific face.
+    family: SauceCodePro Nerd Font
     style: Bold
 
   # The italic font face
   italic:
-    family: FuraCode Nerd Font
-    # Style can be specified to pick a specific face.
-    style: Light
+    family: SauceCodePro Nerd Font
+    style: ExtraLight Italic
 
   # Point size of the font
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
