--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -99,28 +99,15 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g set-titles-string '#h ❐ #S ● #I #W'
 # }}}
 
-# Status and window appearance and style {{{
-  set -g window-status-separator ""
-  set -g window-status-format " #I:#W "
-  set -g window-status-current-format " #I:#W "
-
-  set -g window-status-current-style fg=black,bg=blue,bold
-  set -g window-status-style fg=white,bg=black
-  set -g window-status-activity-style fg=blue,bg=black,bold
-# }}}
-
-
 # status line {{{
-  set -g @nord_tmux_show_status_content "0"
-  # set -g @colors-solarized 'dark'
-  set -g @online_icon "#[bg=green, fg=black, bold]  ONLINE #[bg=default, fg=default, nobold]"
-  set -g @offline_icon "#[bg=red, fg=black, bold]  OFFLINE #[bg=default, fg=default, nobold]"
+  set -g @online_icon "#[bold]  ONLINE #[nobold]"
+  set -g @offline_icon "#[bold]  OFFLINE #[nobold]"
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
 
   set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right "#{online_status} #(vpn_status) #[bg=blue, fg=black] #{world_clock_status} "
+  set-option -g status-right " #{online_status} #(vpn_status) #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
@@ -135,14 +122,15 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
+set -g @plugin "alexanderjeurissen/tmux-snappy"
 set -g @plugin "tmux-plugins/tmux-online-status"
 # set -g @plugin "arcticicestudio/nord-tmux"
 # set -g @plugin 'seebi/tmux-colors-solarized'
-
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+# source-file ~/git/opensource/tmux-snappy-colorscheme/snappy.conf
 # }}}
