--- a/snowblocks/terminal/alacritty.yml
+++ b/snowblocks/terminal/alacritty.yml
@@ -95,19 +95,23 @@ colors:
     black: '0x000000'
     red: '0xFF2600'
     green: '0x00820C'
-    yellow: '0xFFFB00'
+    # yellow: '0xFFFB00'
+    yellow: '0x585858'
     blue: '0x0000E0'
     magenta: '0x800080'
-    cyan: '0x00FDFF'
+    # cyan: '0x00FDFF'
+    cyan: '0x757575'
     white: '0xECF0F1'
   bright:
     black: '0x000000'
     red: '0xFF2600'
     green: '0x00820C'
-    yellow: '0xFFFB00'
+    # yellow: '0xFFFB00'
+    yellow: '0x585858'
     blue: '0x0000E0'
     magenta: '0x800080'
-    cyan: '0x00FDFF'
+    # cyan: '0x00FDFF'
+    cyan: '0x757575'
     white: '0xFFFFFF'
 
 
