Change red,green,blue,magenta colors to be in line with the vim colors

--- a/snowblocks/terminal/alacritty.yml
+++ b/snowblocks/terminal/alacritty.yml
@@ -93,23 +93,23 @@ colors:
     cursor: '0xD8DEE9'
   normal:
     black: '0x000000'
-    red: '0xFF2600'
-    green: '0x00820C'
+    red: '0x800013'
+    green: '0x00802c'
     # yellow: '0xFFFB00'
     yellow: '0x585858'
-    blue: '0x0000E0'
-    magenta: '0x800080'
+    blue: '0x170080'
+    magenta: '0x410080'
     # cyan: '0x00FDFF'
     cyan: '0x757575'
     white: '0xECF0F1'
   bright:
     black: '0x000000'
-    red: '0xFF2600'
-    green: '0x00820C'
+    red: '0x800013'
+    green: '0x00802c'
     # yellow: '0xFFFB00'
     yellow: '0x585858'
-    blue: '0x0000E0'
-    magenta: '0x800080'
+    blue: '0x170080'
+    magenta: '0x410080'
     # cyan: '0x00FDFF'
     cyan: '0x757575'
     white: '0xFFFFFF'
