Update tmux.conf to point to the correct repository.

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -107,7 +107,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g @world_clock_tz 'US/Pacific'
 
   set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right " #{online_status} #(vpn_status) #{world_clock_status} "
+  set-option -g status-right " #{online_status}/ #(vpn_status)/ #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
@@ -122,7 +122,7 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
-set -g @plugin "alexanderjeurissen/tmux-snappy"
+set -g @plugin "alexanderjeurissen/tmux-colors-sombre"
 set -g @plugin "tmux-plugins/tmux-online-status"
 
 # Check if tmux plugin manager is installed, otherwise clone it.
@@ -131,5 +131,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-# source-file ~/git/opensource/tmux-snappy-colorscheme/snappy.conf
+# source-file ~/git/opensource/tmux-colors-sombre/sombre.conf
 # }}}
