Fix some comments, add back reload vimrc mapping.

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -107,7 +107,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g @world_clock_tz 'US/Pacific'
 
   set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right " #{online_status}/ #(vpn_status)/ #{world_clock_status} "
+  set-option -g status-right " #{online_status} #(vpn_status) #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
