Fix reference to updated name of sombre.tmux

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -122,7 +122,7 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
-set -g @plugin "alexanderjeurissen/tmux-colors-sombre"
+set -g @plugin "alexanderjeurissen/sombre.tmux"
 set -g @plugin "tmux-plugins/tmux-online-status"
 
 # Check if tmux plugin manager is installed, otherwise clone it.
