Fix incorrect commented out local source line tmux.conf

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -131,5 +131,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-# source-file ~/git/opensource/tmux-colors-sombre/sombre.conf
+# source-file ~/git/open_source/sombre.tmux/sombre.conf
 # }}}
