--- a/snowblocks/neovim/snowblock.json
+++ b/snowblocks/neovim/snowblock.json
@@ -19,7 +19,8 @@
       { "name": "neovim", "cmd": "gem install neovim" },
       { "name": "neovim-remote", "cmd": "pip3 install neovim-remote" },
       { "name": "vim-vint", "cmd": "pip3 install vim-vint" },
-      { "name": "language_server", "cmd": "gem install language_server" }
+      { "name": "language_server", "cmd": "gem install language_server" },
+      { "name": "pack", "cmd": "cargo install --git https://github.com/maralla/pack.git" }
     ]
   },
   {
