Add IST clock to tmux_worldclock.

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -105,6 +105,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
+  set -g @world_clock_tz 'Asia/Kolkata'
 
   set-option -g status-left "#{pomodoro_status} "
   set-option -g status-right " #{online_status} #(vpn_status) #{world_clock_status} "
