Update vim-vint dep definition, and add pytz to tmux dependencies for worldclock.

--- a/snowblocks/tmux/snowblock.json
+++ b/snowblocks/tmux/snowblock.json
@@ -6,6 +6,12 @@
     ]
   },
   {
+    "dependencies": [
+      { "name": "pytz", "cmd": "pip3 install pytz" },
+      { "name": "pytz", "cmd": "pip2 install pytz" }
+    ]
+  },
+  {
     "link": {
       "~/.tmux.conf": { "relink": true }
     },
