--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# ── General settings ──────────────────────────────────────────────────────────────────────────────
+# ── General settings ──────────────────────────────────────────────────────────
 
 # Set a new keybinding to C-t {{{
   unbind C-r
@@ -10,25 +10,26 @@
 set-option -sg escape-time 0 # change the escape time in tmux to zero, improves vim responsiveness
 set-option -g history-limit 500000 # Increase scrollback history
 
-set -g default-terminal "xterm-256color-italic"
+set -g default-terminal "tmux-256color"
 set -g default-shell /bin/zsh
-set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
+# FIXME: determine if this is needed
+# set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
-set -ga terminal-overrides ',xterm-256color-italic:Tc'
+# https://medium.com/@dubistkomisch/how-to-actually-get-italics-and-true-colour-to-work-in-iterm-tmux-vim-9ebe55ebc2be
+# set -ga terminal-overrides ',tmux-256color-italic:Tc:sitm=\E[3m'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
 
 setw -g mode-keys vi # enable vim mode
 
-# vi-copy settings {{{
-
-  # Copy mode with C-t v
+# vi-copy settings (<prefix> v) {{{
   unbind v
   bind v copy-mode
   bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-  bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+  bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
   bind-key -Tcopy-mode-vi Escape send -X cancel
   bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 # }}}
@@ -52,7 +53,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g @continuum-restore 'on' # auto restore on boot
 # }}}
 
-# ── Pane settings ─────────────────────────────────────────────────────────────────────────────────
+# ── Pane settings ───────────────────────────────────────────────────────────
 
 # Pane resizing {{{
   bind-key -r H resize-pane -L "5"
@@ -71,15 +72,9 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   bind-key -r ">" swap-window -t +1
 # }}}
 
-# set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
+set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
 
-# quick pane cycling {{{
-  unbind ^A
-  bind ^A select-pane -t :.+
-# }}}
-
-
-# ── Status/Window settings ────────────────────────────────────────────────────────────────────────
+# ── Status/Window settings ────────────────────────────────────────────────────────
 
 # Status options {{{
   set-option -g status on
@@ -90,8 +85,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # }}}
 
 # Window options {{{
-  # window is only constrained in size if a smaller client
-  # is actively looking at it.
+  # window is only constrained in size if a smaller client is actively looking at it.
   setw -g aggressive-resize on
   setw -g automatic-rename on # rename window to reflect current program
   set -g renumber-windows on  # renumber windows when a window is closed
@@ -132,5 +126,6 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+# NOTE: local version for debugging sombre.
 # source-file ~/git/open_source/sombre.tmux/sombre.conf
 # }}}
