--- a/snowblocks/terminal/alacritty.yml
+++ b/snowblocks/terminal/alacritty.yml
@@ -95,8 +95,8 @@ colors:
     black: '0x000000'
     red: '0x800013'
     green: '0x00802c'
-    # yellow: '0xFFFB00'
-    yellow: '0x585858'
+    yellow: '0xFFDA40'
+    # yellow: '0x585858'
     blue: '0x170080'
     magenta: '0x410080'
     # cyan: '0x00FDFF'
@@ -104,14 +104,14 @@ colors:
     white: '0xECF0F1'
   bright:
     black: '0x000000'
-    red: '0x800013'
-    green: '0x00802c'
-    # yellow: '0xFFFB00'
+    red: '0xFEB2BD'
+    green: '0xB2FECC'
+    # yellow: '0xfff7d8'
     yellow: '0x585858'
-    blue: '0x170080'
-    magenta: '0x410080'
-    # cyan: '0x00FDFF'
-    cyan: '0x757575'
+    blue: '0xB2BDFE'
+    magenta: '0xD9B2FE'
+    # cyan: '0x757575'
+    cyan: '0xD3D1CC'
     white: '0xFFFFFF'
 
 
