Update tmux settings.

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -94,15 +94,17 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 # }}}
 
 # status line {{{
-  set -g @online_icon "#[bold]  ONLINE #[nobold]"
+  set -g @online_icon " "
   set -g @offline_icon "#[bold]  OFFLINE #[nobold]"
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
-  set -g @world_clock_tz 'Asia/Kolkata'
+
+  set -g @monitor_process 'mbsync'
+  set -g @mbsync_process_template "#[bold]  PROCESS_NAME #[nobold]"
 
   set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right " #{online_status} #(vpn_status) #{world_clock_status} "
+  set-option -g status-right " #{process_indicators} #{online_status} #(vpn_status) #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
@@ -119,6 +121,7 @@ set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
 set -g @plugin "alexanderjeurissen/sombre.tmux"
 set -g @plugin "tmux-plugins/tmux-online-status"
+set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
@@ -126,6 +129,7 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
 # NOTE: local version for debugging sombre.
 # source-file ~/git/open_source/sombre.tmux/sombre.conf
 # }}}
