Fix some snowblocks dependencies

--- a/snowblocks/neovim/snowblock.json
+++ b/snowblocks/neovim/snowblock.json
@@ -20,6 +20,7 @@
       { "name": "neovim-remote", "cmd": "pip3 install neovim-remote" },
       { "name": "vim-vint", "cmd": "pip2 install vim-vint" },
       { "name": "language_server", "cmd": "gem install language_server" },
+      { "name": "cmake", "cmd": "brew install cmake" },
       { "name": "pack", "cmd": "cargo install --git https://github.com/maralla/pack.git" }
     ]
   },
