--- a/snowblocks/tmux/snowblock.json
+++ b/snowblocks/tmux/snowblock.json
@@ -8,7 +8,8 @@
   {
     "dependencies": [
       { "name": "pytz", "cmd": "pip3 install pytz" },
-      { "name": "pytz", "cmd": "pip2 install pytz" }
+      { "name": "pytz", "cmd": "pip2 install pytz" },
+      { "name": "tmux", "cmd": "brew install tmux" }
     ]
   },
   {
@@ -23,10 +24,6 @@
       [
         "git -C ~/.tmux/plugins/tpm pull || git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm",
         "Install/Update TPM (Tmux plugin manager)"
-      ],
-      [
-        "tmux source ~/.tmux.conf",
-        "Let tmux source ~/.tmux.conf"
       ]
     ]
   }
