--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -106,7 +106,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @vpn_interface_name "utun1"
 
   set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right " #{process_indicators} #{online_status} #{vpn_status} #{world_clock_status} "
+  set-option -g status-right " #{process_indicators} #{online_status} #(~/.scripts/vpn_status) #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
@@ -124,7 +124,6 @@ set -g @plugin "alexanderjeurissen/tmux-world-clock"
 set -g @plugin "alexanderjeurissen/sombre.tmux"
 set -g @plugin "tmux-plugins/tmux-online-status"
 set -g @plugin "alexanderjeurissen/tmux-process-indicator"
-set -g @plugin 'RSO/tmux-vpn-status'
 
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
