--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,132 @@
 [submodule "snowblocks/zsh/zplug"]
 	path = snowblocks/zsh/zplug
 	url = https://github.com/zplug/zplug
+[submodule "snowblocks/neovim/pack/autocomplete/opt/ultisnips"]
+	path = snowblocks/neovim/pack/autocomplete/opt/ultisnips
+	url = https://github.com/SirVer/ultisnips
+[submodule "snowblocks/neovim/pack/clojure/opt/vim-fireplace"]
+	path = snowblocks/neovim/pack/clojure/opt/vim-fireplace
+	url = https://github.com/tpope/vim-fireplace
+[submodule "snowblocks/neovim/pack/colorschemes/start/lumiere.vim"]
+	path = snowblocks/neovim/pack/colorschemes/start/lumiere.vim
+	url = https://github.com/alexanderjeurissen/lumiere.vim
+[submodule "snowblocks/neovim/pack/colorschemes/opt/nova-vim"]
+	path = snowblocks/neovim/pack/colorschemes/opt/nova-vim
+	url = https://github.com/trevordmiller/nova-vim
+[submodule "snowblocks/neovim/pack/colorschemes/opt/inkstained-vim"]
+	path = snowblocks/neovim/pack/colorschemes/opt/inkstained-vim
+	url = https://github.com/yuttie/inkstained-vim
+[submodule "snowblocks/neovim/pack/default/opt/vim-prosession"]
+	path = snowblocks/neovim/pack/default/opt/vim-prosession
+	url = https://github.com/dhruvasagar/vim-prosession
+[submodule "snowblocks/neovim/pack/default/start/FastFold"]
+	path = snowblocks/neovim/pack/default/start/FastFold
+	url = https://github.com/Konfekt/FastFold
+[submodule "snowblocks/neovim/pack/default/start/ale"]
+	path = snowblocks/neovim/pack/default/start/ale
+	url = https://github.com/w0rp/ale
+[submodule "snowblocks/neovim/pack/default/start/searchfold.vim"]
+	path = snowblocks/neovim/pack/default/start/searchfold.vim
+	url = https://github.com/vim-scripts/searchfold.vim
+[submodule "snowblocks/neovim/pack/default/start/vim-dispatch"]
+	path = snowblocks/neovim/pack/default/start/vim-dispatch
+	url = https://github.com/tpope/vim-dispatch
+[submodule "snowblocks/neovim/pack/default/start/vim-dispatch-neovim"]
+	path = snowblocks/neovim/pack/default/start/vim-dispatch-neovim
+	url = https://github.com/radenling/vim-dispatch-neovim
+[submodule "snowblocks/neovim/pack/default/start/vim-obsession"]
+	path = snowblocks/neovim/pack/default/start/vim-obsession
+	url = https://github.com/tpope/vim-obsession
+[submodule "snowblocks/neovim/pack/default/start/vim-polyglot"]
+	path = snowblocks/neovim/pack/default/start/vim-polyglot
+	url = https://github.com/sheerun/vim-polyglot
+[submodule "snowblocks/neovim/pack/default/start/vim-scriptease"]
+	path = snowblocks/neovim/pack/default/start/vim-scriptease
+	url = https://github.com/tpope/vim-scriptease
+[submodule "snowblocks/neovim/pack/editing/start/file-line"]
+	path = snowblocks/neovim/pack/editing/start/file-line
+	url = https://github.com/bogado/file-line
+[submodule "snowblocks/neovim/pack/editing/start/vim-commentary"]
+	path = snowblocks/neovim/pack/editing/start/vim-commentary
+	url = https://github.com/tpope/vim-commentary
+[submodule "snowblocks/neovim/pack/editing/start/vim-endwise"]
+	path = snowblocks/neovim/pack/editing/start/vim-endwise
+	url = https://github.com/tpope/vim-endwise
+[submodule "snowblocks/neovim/pack/editing/start/vim-exchange"]
+	path = snowblocks/neovim/pack/editing/start/vim-exchange
+	url = https://github.com/tommcdo/vim-exchange
+[submodule "snowblocks/neovim/pack/editing/start/vim-highlightedyank"]
+	path = snowblocks/neovim/pack/editing/start/vim-highlightedyank
+	url = https://github.com/machakann/vim-highlightedyank
+[submodule "snowblocks/neovim/pack/editing/start/vim-repeat"]
+	path = snowblocks/neovim/pack/editing/start/vim-repeat
+	url = https://github.com/tpope/vim-repeat
+[submodule "snowblocks/neovim/pack/editing/start/vim-sleuth"]
+	path = snowblocks/neovim/pack/editing/start/vim-sleuth
+	url = https://github.com/tpope/vim-sleuth
+[submodule "snowblocks/neovim/pack/editing/start/vim-surround"]
+	path = snowblocks/neovim/pack/editing/start/vim-surround
+	url = https://github.com/tpope/vim-surround
+[submodule "snowblocks/neovim/pack/frontend/opt/vim-css-color"]
+	path = snowblocks/neovim/pack/frontend/opt/vim-css-color
+	url = https://github.com/ap/vim-css-color
+[submodule "snowblocks/neovim/pack/navigation/start/RootIgnore"]
+	path = snowblocks/neovim/pack/navigation/start/RootIgnore
+	url = https://github.com/octref/RootIgnore
+[submodule "snowblocks/neovim/pack/navigation/start/vim-bbye"]
+	path = snowblocks/neovim/pack/navigation/start/vim-bbye
+	url = https://github.com/moll/vim-bbye
+[submodule "snowblocks/neovim/pack/navigation/start/vim-delete-hidden-buffers"]
+	path = snowblocks/neovim/pack/navigation/start/vim-delete-hidden-buffers
+	url = https://github.com/arithran/vim-delete-hidden-buffers
+[submodule "snowblocks/neovim/pack/navigation/start/vim-dirvish"]
+	path = snowblocks/neovim/pack/navigation/start/vim-dirvish
+	url = https://github.com/justinmk/vim-dirvish
+[submodule "snowblocks/neovim/pack/navigation/start/vim-eunuch"]
+	path = snowblocks/neovim/pack/navigation/start/vim-eunuch
+	url = https://github.com/tpope/vim-eunuch
+[submodule "snowblocks/neovim/pack/navigation/start/vim-projectionist"]
+	path = snowblocks/neovim/pack/navigation/start/vim-projectionist
+	url = https://github.com/tpope/vim-projectionist
+[submodule "snowblocks/neovim/pack/navigation/start/vim-rooter"]
+	path = snowblocks/neovim/pack/navigation/start/vim-rooter
+	url = https://github.com/airblade/vim-rooter
+[submodule "snowblocks/neovim/pack/navigation/start/vim-sneak"]
+	path = snowblocks/neovim/pack/navigation/start/vim-sneak
+	url = https://github.com/justinmk/vim-sneak
+[submodule "snowblocks/neovim/pack/navigation/start/vim-tmux-navigator"]
+	path = snowblocks/neovim/pack/navigation/start/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator
+[submodule "snowblocks/neovim/pack/navigation/start/vim-unimpaired"]
+	path = snowblocks/neovim/pack/navigation/start/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired
+[submodule "snowblocks/neovim/pack/navigation/start/vim-visualstar"]
+	path = snowblocks/neovim/pack/navigation/start/vim-visualstar
+	url = https://github.com/thinca/vim-visualstar
+[submodule "snowblocks/neovim/pack/ruby/opt/vim-bundler"]
+	path = snowblocks/neovim/pack/ruby/opt/vim-bundler
+	url = https://github.com/tpope/vim-bundler
+[submodule "snowblocks/neovim/pack/ruby/opt/vim-cucumber"]
+	path = snowblocks/neovim/pack/ruby/opt/vim-cucumber
+	url = https://github.com/tpope/vim-cucumber
+[submodule "snowblocks/neovim/pack/ruby/opt/vim-rails"]
+	path = snowblocks/neovim/pack/ruby/opt/vim-rails
+	url = https://github.com/tpope/vim-rails
+[submodule "snowblocks/neovim/pack/version_control/start/gist-vim"]
+	path = snowblocks/neovim/pack/version_control/start/gist-vim
+	url = https://github.com/mattn/gist-vim
+[submodule "snowblocks/neovim/pack/version_control/start/vim-diff-fold"]
+	path = snowblocks/neovim/pack/version_control/start/vim-diff-fold
+	url = https://github.com/sgeb/vim-diff-fold
+[submodule "snowblocks/neovim/pack/version_control/start/vim-fugitive"]
+	path = snowblocks/neovim/pack/version_control/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive
+[submodule "snowblocks/neovim/pack/version_control/start/vim-git"]
+	path = snowblocks/neovim/pack/version_control/start/vim-git
+	url = https://github.com/tpope/vim-git
+[submodule "snowblocks/neovim/pack/version_control/start/webapi-vim"]
+	path = snowblocks/neovim/pack/version_control/start/webapi-vim
+	url = https://github.com/mattn/webapi-vim
+[submodule "snowblocks/neovim/pack/window_management/start/vim-maximizer"]
+	path = snowblocks/neovim/pack/window_management/start/vim-maximizer
+	url = https://github.com/szw/vim-maximizer
