--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "snowblocks/zsh/zplug"]
 	path = snowblocks/zsh/zplug
 	url = https://github.com/zplug/zplug
+[submodule "snowblocks/neovim/pack/autocomplete/opt/ultisnips"]
+	path = snowblocks/neovim/pack/autocomplete/opt/ultisnips
+	url = https://github.com/Sirver/ultisnips.git
